--- a/TTRN/index.html
+++ b/TTRN/index.html
@@ -1,18 +1,33 @@
-<html>
+<!doctype html>
+
 <head>
-<title>Please type your Username and Password... </title>
-<script language="JavaScript" type="text/JavaScript" src="login.js"></script>
+	<title>TTIR Home</title>
 </head>
-<body bgcolor="#0AC6FF">
-<form>
-<br>
-<center>
-Username: <input type="text" name="username" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-Password: <input type="password" name="password" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-<input type="button" value="Login" onClick="Login(this.form);" style="background:#bfbfbf;color:#000000;border-color:#212121;" onMouseOver="this.style.color = '#404040';" onMouseOut="this.style.color = '#000000';" onFocusr="this.style.color = '#404040';" onBlur="this.style.color = '#000000';">
-</center>
-</form>
+
+<body background = "background.PNG">
+	<a href = "Contact.html">
+	<left><img src = "TTIR G.PNG" width = "130" height = "100">
+	</a>
+	<a href = "About us TTIR.html">
+	<left><img src = "TTIR B.PNG" width = "130" height = "100">
+	</a>
+	<a href = "Application.html">
+	<img src = "TTIR P.PNG" width = "130" height = "100">
+</a>
+	<h1 style="font-size:0px">
+	<p align="right">
+		
+		
+		
+		</h1>
+		
+		
+	</p>
+	
+	<center><h1 style = "font-family: Hobo Std; font-size: 50px;">Toon Town Infinite Retro</h1></center>
+	
+
+
+
 </body>
 </html>
