--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
-<!doctype html>
+<HTML>
+    <HEADER>
+	<TITLE>AKBlue2</TITLE>
+	</HEADER>
 
-<head>
-	<title>TTIR Home</title>
-</head>
-
-<body background = "background.PNG">
-	<a href = "Contact.html">
-	<left><img src = "TTIR G.PNG" width = "130" height = "100">
-	</a>
-	<a href = "About us TTIR.html">
-	<left><img src = "TTIR B.PNG" width = "130" height = "100">
-	</a>
-	<a href = "Application.html">
-	<img src = "TTIR P.PNG" width = "130" height = "100">
-</a>
-	<h1 style="font-size:0px">
-	<p align="right">
-		
-		
-		
-		</h1>
-		
-		
-	</p>
+<BODY bgcolor=#32BAF0>
+<CENTER>
+<img alt src="strat.jpg" border="4">
+<P><H1>Welcome to the new website!</H1></P>
+<a href="http:google.com">click here to go strait to google</a>
+</CENTER>
+This is what the website will have
+<UL>
+	<LI>I will have lots of cool guitar pictures!</LI>
 	
-	<center><h1 style = "font-family: Hobo Std; font-size: 50px;">Toon Town Infinite Retro</h1></center>
-	
+	<LI>I will also have links to some of my vieos on YouTube!</LI>
+</UL>
+<p>Click the button to display a confirm box.</p>
 
+<button onclick="myFunction()">Try it</button>
 
+<script>
+function myFunction() {
+    confirm("Press a button!");
+}
+</script>
 
-</body>
-</html>
+</BODY>
+</HTML>
