--- a/index.html
+++ b/index.html
@@ -1,29 +1,18 @@
-<HTML>
-    <HEADER>
-	<TITLE>AKBlue2</TITLE>
-	</HEADER>
-
-<BODY bgcolor=#32BAF0>
-<CENTER>
-<img alt src="strat.jpg" border="4">
-<P><H1>Welcome to the new website!</H1></P>
-<a href="http:google.com">click here to go strait to google</a>
-</CENTER>
-This is what the website will have
-<UL>
-	<LI>I will have lots of cool guitar pictures!</LI>
-	
-	<LI>I will also have links to some of my vieos on YouTube!</LI>
-</UL>
-<p>Click the button to display a confirm box.</p>
-
-<button onclick="myFunction()">Try it</button>
-
-<script>
-function myFunction() {
-    confirm("Press a button!");
-}
-</script>
-
-</BODY>
-</HTML>
+<html>
+<head>
+<title>Please type your Username and Password... </title>
+<script language="JavaScript" type="text/JavaScript" src="login.js"></script>
+</head>
+<body bgcolor="#0AC6FF">
+<form>
+<br>
+<center>
+Username: <input type="text" name="username" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
+<br>
+Password: <input type="password" name="password" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
+<br>
+<input type="button" value="Login" onClick="Login(this.form);" style="background:#bfbfbf;color:#000000;border-color:#212121;" onMouseOver="this.style.color = '#404040';" onMouseOut="this.style.color = '#000000';" onFocusr="this.style.color = '#404040';" onBlur="this.style.color = '#000000';">
+</center>
+</form>
+</body>
+</html>
