--- a/index.html
+++ b/index.html
@@ -1,18 +1,83 @@
+<!doctype>
 <html>
-<head>
-<title>Please type your Username and Password... </title>
-<script language="JavaScript" type="text/JavaScript" src="login.js"></script>
-</head>
-<body bgcolor="#0AC6FF">
-<form>
-<br>
-<center>
-Username: <input type="text" name="username" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-Password: <input type="password" name="password" style="background:#bfbfbf;color:#212121;border-color:#212121;" onFocus="this.style.background = '#ffffff';" onBlur="this.style.background = '#bfbfbf';">
-<br>
-<input type="button" value="Login" onClick="Login(this.form);" style="background:#bfbfbf;color:#000000;border-color:#212121;" onMouseOver="this.style.color = '#404040';" onMouseOut="this.style.color = '#000000';" onFocusr="this.style.color = '#404040';" onBlur="this.style.color = '#000000';">
-</center>
-</form>
+
+<header>
+	<title>Movies</title>
+</header>
+
+<body bgcolor = "#5AC8FB">
+
+	<center><h1 style = "font-size:60px;">Movies</h1></center>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<center><a href = "The_Hateful_Eight.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>The Hateful Eight</a></center>
+
+	<center><h1 style = "font-size:20px;color:orange;">Note: If you are on a computer, keep the mouse on the controls or the screen will turn blue</h1></center>
+
+	<center>
+	<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/0BwMxGGHYeBsXS3ZMTWdpTEs0ZXM/preview" allowfullscreen></iframe>
+		</center>
+
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+
+	<center><a href = "Star_Wars_The_Force_Awakens.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Star Wars: The Force Awakens</a></center>
+
+	<center>
+	<video width = "400" controls>
+		<source src = "Star_Wars_The_Force_Awakens.mp4" type = "video/mp4">
+		</center>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<center><a href = "Cast_Away.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Cast Away</a></center>
+	<center><video width = "400" controls>
+		<source src = "Cast_Away.mp4" type = "video/mp4">
+		</center>
+
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<center><a href = "Borat.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Borat</a></center>
+		<center>
+			<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/0BwMxGGHYeBsXWWxFT1J0dkJVemM/preview" allowfullscreen></iframe>
+			</center>
+
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+
+			<center><a href = "war_dogs.zip" style = "font-size:50px;text-decoratiopn:none;color:red;" download>War Dogs</a></center>
+			<center><video width = "400" controls>
+				<source src = "War Dogs (2016) English 1CD HDTS x264 AAC- Downloadhub.mp4" type = "video/mp4">
+				</center>
+
 </body>
 </html>
