--- a/index.html
+++ b/index.html
@@ -33,33 +33,6 @@
 	<br>
 	<br>
 
-	<center><a href = "Star_Wars_The_Force_Awakens.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Star Wars: The Force Awakens</a></center>
-
-	<center>
-	<video width = "400" controls>
-		<source src = "Star_Wars_The_Force_Awakens.mp4" type = "video/mp4">
-		</center>
-
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-
-		<center><a href = "Cast_Away.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Cast Away</a></center>
-	<center><video width = "400" controls>
-		<source src = "Cast_Away.mp4" type = "video/mp4">
-		</center>
-
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
 
 		<center><a href = "Borat.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Borat</a></center>
 		<center>
@@ -75,9 +48,21 @@
 			<br>
 
 			<center><a href = "war_dogs.zip" style = "font-size:50px;text-decoratiopn:none;color:red;" download>War Dogs</a></center>
-			<center><video width = "400" controls>
-				<source src = "War Dogs (2016) English 1CD HDTS x264 AAC- Downloadhub.mp4" type = "video/mp4">
+			<center>
+				<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/0BwMxGGHYeBsXQ3l1RFh4MmlSZDQ/preview" allowfullscreen></iframe>
 				</center>
+				
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				<br>
+				
+				<center><a href = ""style = "font-size:50px;text-decoratiopn:none;color:red;">Tropic Thunder</a></center>
+				<center>
+					<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/1b7pUuqUDj29Js2u1wtjrO1lcz6l1fYHh/preview" allowfullscreen>
 
 </body>
 </html>
