--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!doctype>
 <html>
+<link rel = "stylesheet" type = "text/css" href = "drop.css">
 
 <header>
 	<title>Movies</title>
+	
+	<link href='http://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
+	<style>
+	body{
+		font-family: 'Dosis', sans-serif;
+	}
+	</style>
 </header>
 
 <body bgcolor = "#5AC8FB">
+	
+	<div class="navbar">
+	  <div class="dropdown">
+	    <button class="dropbtn">South Park 
+	      <i class="fa fa-caret-down"></i>
+	    </button>
+	    <div class="dropdown-content">
+	      <a href="southpark.html">Season 1</a>
+	      <a href="#">Season 2</a>
+	      <a href="#">Link 3</a>
+	    </div>
+	  </div> 
+	  
+	  <div class="workdrop">
+	    <button class="workbtn">Workaholics 
+	      <i class="fa fa-caret-down"></i>
+	    </button>
+	    <div class="workdrop-content">
+	      <a href="workaholics.html">Season 1</a>
+	      <a href="#">Season 2</a>
+	      <a href="#">Link 3</a>
+	    </div>
+	  </div>
+	  
+	</div>
 
 	<center><h1 style = "font-size:60px;">Movies</h1></center>
 
