--- a/workaholics.html
+++ b/workaholics.html
@@ -7,7 +7,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" type="text/css">
 	<style>
 	body{
-		font-family: 'Dosis', sans-serif;
+		font-family: Arial;
 	}
 	</style>
 </header>
