--- a/workaholics.html
+++ b/workaholics.html
@@ -4,10 +4,10 @@
 <header>
 	<title>Workaholics</title>
 	
-	<link href="http://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" type="text/css">
+	<link href="http://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet" type= "text/css">
 	<style>
 	body{
-		font-family: Arial;
+		font-family: 'Dosis', sans-serif;
 	}
 	</style>
 </header>
