--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype>
 <html>
 <link rel = "stylesheet" type = "text/css" href = "drop.css">
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112713030-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112713030-1');
+</script>
 
 <header>
 	<title>Movies</title>
