--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!doctype>
 <html>
-<link rel = "stylesheet" type = "text/css" href = "drop.css">
+<link rel = "stylesheet" type = "text/css" href = "Ubuntu">
 
 <header>
 	<title>Movies</title>
 	
-	<link href='http://fonts.googleapis.com/css?family=Dosis:400,700' rel='stylesheet' type='text/css'>
 	<style>
+		
+		@font-face {
+		  font-family: 'Ubuntu';
+		  font-style: normal;
+		  font-weight: 400;
+		  src: local('Ubuntu Regular'), local('Ubuntu-Regular'), url(https://fonts.gstatic.com/s/ubuntu/v11/4iCs6KVjbNBYlgoKfw7wnU6AFw.woff) format('woff');
+		}
+		
 	body{
-		font-family: 'Dosis', sans-serif;
+		font-family: 'Ubuntu', sans-serif;
 	}
 	</style>
 </header>
@@ -52,9 +59,9 @@
 	<br>
 
 
-		<center><a href = "Borat.mp4.zip" style = "font-size:50px;text-decoration:none;color:red;" download>Borat</a></center>
+		<center><a href = "Borat.mp4.zip" style = "font-size:50px;text-decoraption:none;color:red;" download>Borat</a></center>
 		<center>
-			<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/0BwMxGGHYeBsXWWxFT1J0dkJVemM/preview" allowfullscreen></iframe>
+			<iframe style = "border:15px solid #0febff;border-radius:10px;" width = "35%" height = "35%" src = "https://drive.google.com/file/d/0BwMxGGHYeBsXWWxFT1J0dkJVemM/preview" allowfullscreen></iframe>
 			</center>
 
 			<br>
