--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <link rel = "stylesheet" type = "text/css" href = "drop.css">
 
 <header>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112713030-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-112713030-1');
+	</script>
+
+
 	<title>Movies</title>
 	
 	<style>
