--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<br>
 				<br>
 				
-				<center><a href = ""style = "font-size:50px;text-decoratiopn:none;color:red;">Tropic Thunder</a></center>
+				<center><a href = ""style = "font-size:50px;text-decoratiopn:none;color:red;">Fight Club</a></center>
 				<center>
 					<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/1b7pUuqUDj29Js2u1wtjrO1lcz6l1fYHh/preview" allowfullscreen>
 
