--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 				
 				<center><a href = ""style = "font-size:50px;text-decoratiopn:none;color:red;">Fight Club</a></center>
 				<center>
-					<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/1b7pUuqUDj29Js2u1wtjrO1lcz6l1fYHh/preview" allowfullscreen>
+					<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/1A2hYvXrIQ19QhoLKKYb7QILxbBY9dRd8/view?usp=sharing" allowfullscreen>
 
 </body>
 </html>
