eric andre added

--- a/index.html
+++ b/index.html
@@ -51,9 +51,18 @@
 	    </button>
 	    <div class="workdrop-content">
 	      <a href="workaholics.html">Season 1</a>
-	      <a href="#">Season 2</a>
+	      <a href="wrk2.html">Season 2</a>
 	      <a href="#">Link 3</a>
 	    </div>
+	  </div>
+	  
+	  <div class = "ericdrop">
+		  <button class = "ericbtn">Eric Andre Show
+			  <i class = "fa fa-carpet-down"></i>
+		  </button>
+		  <div class = "ericdrop-content">
+			  <a href = "ericandre1.html">Season 1</a>
+		  </div>
 	  </div>
 	  
 	</div>
@@ -111,6 +120,16 @@
 						<center><a href = ""style = "font-size:50px;text-decoratiopn:none;color:red;">Pineapple Express</a></center>
 						<center>
 							<iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/1qGwXTfffYSTzssY88J45veTK1kw7gf9l/preview" allowfullscreen></iframe></center>
+							
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<center><a href = "" style = "font-size:50px;text-decoratiopn:none;color:red;">This is The End</a></center>
+					<center><iframe width = "35%" height = "35%" src = "https://drive.google.com/file/d/15_unDCMvIPjkAIuypVDUObqyrCrcuCbN/preview" allowfullscreen></iframe></center>
 
 </body>
 </html>
